save data for plotting

--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -885,5 +885,8 @@ taxon_list <- gsub("\\..*","",species_list)
 
 Restuls <- PropChange(taxon_list)
 
+write.csv(Results,
+          "Clean_Results.csv")
+
 
 ```
